# fizzbuzz_python_function

./: .gitignore  Makefile  README.md  pyproject.toml
app/: fizzbuzz.py
tests/: test_fizzbuzz.py
