[tool.poetry]
name = "fizzbuzz"
version = "0.1.0"
description = "Just build a function for the fizzbuzz problem"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
